--- a/index.html
+++ b/index.html
@@ -5,21 +5,19 @@
   <link href="resources/css/style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-  <!-- Header
-    <header>
-      <div class="logo">
-        <img src="resources/images/img-myt-logo.jpg">
-        <span>My Times</span>
-      </div>
- Navigation section
-      <nav>
-          <span><a href="#">World</a></span>
-          <span><a href="#">US</a></span>
-          <span><a href="#">Tech</a></span>
-          <span><a href="#">Science</a></span>
-      </nav>
-  -->
-
+  <!-- Header-->
+  <header>
+    <div class="logo">
+      <img src="resources/images/img-myt-logo.jpg">
+      <span>My Times</span>
+    </div>
+    <nav>
+      <span><a href="#">World</a></span>
+      <span><a href="#">US</a></span>
+      <span><a href="#">Tech</a></span>
+      <span><a href="#">Science</a></span>
+    </nav>
+  </header>
   <!--Main Content Container-->
   <div class="content">
     <!--First column-->
@@ -40,29 +38,32 @@
           Nullam sit amet fringilla massa.</p>
       </div> <!--closing main-story-->
       <div class="articles">
-        <div class="story-column">
-          <h2> Orca Spends Vacation at Land World Puget</h2>
-          <p class="story-content">PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula
-          ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar
-          ante accumsan...</p>
-        </div><!--closing story-column-->
-        <div class="fall-cancelled image-content">
-            <span> Earth Spins Backwards for 2017</span>
-        </div> <!--closing fall-cancelled image-content-->
-        <div class="story-column">
-          <h2>Burger for Breakfast: How Early is too Early?</h2>
-          <p class="story-content">Mew York, MY—Interdum et malesuada fames ac ante ipsum primis
+        <div class="article">
+          <div class="story-column">
+            <h2> Orca Spends Vacation at Land World Puget</h2>
+            <p class="story-content">PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula
+            ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar
+            ante accumsan...</p>
+          </div><!--closing story-column-->
+          <div class="fall-cancelled image-content">
+              <span> Earth Spins Backwards for 2017</span>
+          </div> <!--closing fall-cancelled image-content-->
+        </div> <!--closing article-->
+        <div class="article">
+          <div class="story-column">
+            <h2>Burger for Breakfast: How Early is too Early?</h2>
+            <p class="story-content">Mew York, MY—Interdum et malesuada fames ac ante ipsum primis
           in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent
-          eu nisl erat.
-          </p>
-        <div class="pop-culture image-content">
+          eu nisl erat.</p>
+          </div><!--closing story-column-->
+          <div class="pop-culture image-content">
             <span> Research Shows Cameras Erase Memory</span>
           </div> <!--closing pop-culture image-content-->
-        </div>
-      </div>
-    </div>
+        </div> <!--closing article-->
+      </div> <!--closing articles-->
+    </div> <!--closing large column-->
     <div class="column medium">
-      <div class="articles">
+      <div class="article">
         <div class="story-column">
           <h2>FBI Finds Action Star Guilty of False Advertising</h2>
           <p class="story-content">WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam
@@ -72,17 +73,17 @@
           vitae. Morbi eget rutrum urna. Cras condimentum augue ut ante sollicitudin interdum.
           Pellentesque cursus dolor at tincidunt cursus. Vestibulum blandit aliquam felis...</p>
         </div> <!--Closing the "story-column" div-->
+      </div><!--Closing the articles div-->
+      <div class="article">
         <div class="cat-ceo image-content">
         <span> Cats in Control - Is It a Thing?</span>
         </div> <!--Closing the Cats in Control div-->
-      </div><!--Closing the articles div-->
-      <div class="articles">
         <p class="story-content">BROOKLYN, NY- In molestie nulla sodales sit amet.
           Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel
           consectetur neque mi velneque. Mauris ultricies, nulla scelerisque sollicitudin
           lobortis, dui est sodales sapien, a vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor, quis
           commodo tellus pellentesque in. </p>
-      </div>
+      </div> <!--closing article-->
     </div> <!--Closing the column medium div-->
     <div class="column small">
       <img src="resources/images/img-news-bite.png" alt= "This is a picture of a cookie">
