--- a/index.html
+++ b/index.html
@@ -46,18 +46,18 @@
             ante accumsan...</p>
           </div><!--closing story-column-->
           <div class="fall-cancelled image-content">
-              <span> Earth Spins Backwards for 2017</span>
+            <span>Earth Spins Backwards for 2017</span>
           </div> <!--closing fall-cancelled image-content-->
         </div> <!--closing article-->
         <div class="article">
           <div class="story-column">
             <h2>Burger for Breakfast: How Early is too Early?</h2>
-            <p class="story-content">Mew York, MY—Interdum et malesuada fames ac ante ipsum primis
-          in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent
-          eu nisl erat.</p>
+            <p class="story-content">Mew York, MY—Interdum et malesuada fames ac ante ipsum
+              primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim.
+              Praesenteu nisl erat.</p>
           </div><!--closing story-column-->
           <div class="pop-culture image-content">
-            <span> Research Shows Cameras Erase Memory</span>
+              <span>Research Shows Cameras Erase Memory</span>
           </div> <!--closing pop-culture image-content-->
         </div> <!--closing article-->
       </div> <!--closing articles-->
@@ -76,7 +76,7 @@
       </div><!--Closing the articles div-->
       <div class="article">
         <div class="cat-ceo image-content">
-        <span> Cats in Control - Is It a Thing?</span>
+          <span> Cats in Control - Is It a Thing?</span>
         </div> <!--Closing the Cats in Control div-->
         <p class="story-content">BROOKLYN, NY- In molestie nulla sodales sit amet.
           Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel
@@ -88,7 +88,7 @@
     <div class="column small">
       <img src="resources/images/img-news-bite.png" alt= "This is a picture of a cookie">
       <div class="news-bites">
-        <h3>THIS BITES</h3>
+        <h3>NEWS BITES</h3>
         <span class="bite">Cat Emoji Goes Viral</span>
         <span class="bite">Buy YouTube Views</span>
         <span class="bite">Home Business Advertising Ideas</span>
@@ -97,5 +97,19 @@
       </div>
     </div>
   </div>
+  <footer>
+    <div class="info">
+      <span class="title">MY Times</span>
+      <nav>
+        <span><a href="#">World</a></span>
+        <span><a href="#">US</a></span>
+        <span><a href="#">Tech</a></span>
+        <span><a href="#">Science</a></span>
+      </nav>
+    </div><!--closing div class info-->
+    <div class="copyright">
+      ©2016, My Times (A Division of Codecademy bite)
+    </div><!--closing div class copyright-->
+  </footer>
 </body>
 </html>
